--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "ml-xyzrender"
 version = "0.0.2"
 description = "Publication-quality molecular graphics from the command line."
-authors = [{name = "Dr Alister S. Goodfellow"}, {name = "Alec Noppe}]
+authors = [{name = "Dr Alister S. Goodfellow"}, {name = "Alec Noppe"}]
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
